--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -402,31 +402,6 @@
  AUS_cn_ADJ:0 "Austrian"
  AUS_an_ADJ:0 "Austrian"
 
- SCS_ni:0 "Dinaric Federation"
- SCS_ni_DEF:0 "The Dinaric Federation"
- SCS_ds:0 "Dinaric Federation"
- SCS_ds_DEF:0 "The Dinaric Federation"
- SCS_rc:0 "Dinaric Federation"
- SCS_rc_DEF:0 "The Dinaric Federation"
- SCS_an:0 "Dinaric Federation"
- SCS_an_DEF:0 "The Dinaric Federation"
- SCS_cn:0 "Dinaric Federation"
- SCS_cn_DEF:0 "The Dinaric Federation"
- SCS_lb:0 "Dinaric Federation"
- SCS_lb_DEF:0 "The Dinaric Federation"
- SCS_ss:0 "Dinaric Federation"
- SCS_ss_DEF:0 "The Dinaric Federation"
- SCS_jc:0 "Dinaric People's Union"
- SCS_jc_DEF:0 "The Dinaric People's Union"
- SCS_ni_ADJ:0 "Dinaric"
- SCS_rc_ADJ:0 "Dinaric"
- SCS_lb_ADJ:0 "Dinaric"
- SCS_ss_ADJ:0 "Dinaric"
- SCS_jc_ADJ:0 "Dinaric"
- SCS_ds_ADJ:0 "Dinaric"
- SCS_cn_ADJ:0 "Dinaric"
- SCS_an_ADJ:0 "Dinaric"
-
  HUN_ni:0 "Hungary"
  HUN_ni_DEF:0 "The Kingdom of Hungary"
  HUN_ds:0 "Hungary"
@@ -1329,31 +1304,6 @@ GAN_ds_ADJ:0 "Mongolian"
 GAN_cn_ADJ:0 "Mongolian"
 GAN_an_ADJ:0 "Mongolian"
 
- QGH_ni:0 "Indendent State of Hui"
- QGH_ni_DEF:0 "The Indendent State of Hui"
- QGH_ds:0 "Indendent State of Hui"
- QGH_ds_DEF:0 "The Indendent State of Hui"
- QGH_rc:0 "Indendent State of Hui"
- QGH_rc_DEF:0 "The Indendent State of Hui"
- QGH_an:0 "Indendent State of Hui"
- QGH_an_DEF:0 "The Indendent State of Hui"
- QGH_cn:0 "Indendent State of Hui"
- QGH_cn_DEF:0 "The Indendent State of Hui"
- QGH_lb:0 "Indendent State of Hui"
- QGH_lb_DEF:0 "The Indendent State of Hui"
- QGH_ss:0 "Indendent State of Hui"
- QGH_ss_DEF:0 "The Indendent State of Hui"
- QGH_jc:0 "Indendent State of Hui"
- QGH_jc_DEF:0 "The Indendent State of Hui"
- QGH_ni_ADJ:0 "Hui"
- QGH_rc_ADJ:0 "Hui"
- QGH_lb_ADJ:0 "Hui"
- QGH_ss_ADJ:0 "Hui"
- QGH_jc_ADJ:0 "Hui"
- QGH_ds_ADJ:0 "Hui"
- QGH_cn_ADJ:0 "Hui"
- QGH_an_ADJ:0 "Hui"
-
  SHX_ni:0 "Western Constitutionalist Army"
  SHX_ni_DEF:0 "The Western Constitutionalist Army"
  SHX_ds:0 "Western Constitutionalist Army"
@@ -1556,8 +1506,8 @@ GAN_an_ADJ:0 "Mongolian"
 
  INS_ni:0 "Batavia Interim Government"
  INS_ni_DEF:0 "The Batavia Interim Government"
- INS_ds:0 "Batavia Interim Government"
- INS_ds_DEF:0 "The Batavia Interim Government"
+ INS_ds:0 "Batavia Reclamation Junta"
+ INS_ds_DEF:0 "the Batavia Reclamation Junta"
  INS_rc:0 "Batavia Interim Government"
  INS_rc_DEF:0 "The Batavia Interim Government"
  INS_an:0 "Batavia Interim Government"
@@ -1583,8 +1533,8 @@ GAN_an_ADJ:0 "Mongolian"
  ACE_ni_DEF:0 "The Sultanate of Aceh"
  ACE_ds:0 "Sultanate of Aceh"
  ACE_ds_DEF:0 "The Sultanate of Aceh"
- ACE_rc:0 "Sultanate of Aceh"
- ACE_rc_DEF:0 "The Sultanate of Aceh"
+ ACE_rc:0 "Sultanate of the Original Way"
+ ACE_rc_DEF:0 "the Sultanate of the Original Way"
  ACE_an:0 "Sultanate of Aceh"
  ACE_an_DEF:0 "The Sultanate of Aceh"
  ACE_cn:0 "Sultanate of Aceh"
@@ -1614,8 +1564,8 @@ GAN_an_ADJ:0 "Mongolian"
  LAN_an_DEF:0 "The Free State of Lanfang"
  LAN_cn:0 "Lanfang"
  LAN_cn_DEF:0 "The Free State of Lanfang"
- LAN_lb:0 "Lanfang"
- LAN_lb_DEF:0 "The Free State of Lanfang"
+ LAN_lb:0 "Verdant Dynasty"
+ LAN_lb_DEF:0 "The Verdant Dynasty"
  LAN_ss:0 "Lanfang"
  LAN_ss_DEF:0 "The Free State of Lanfang"
  LAN_jc:0 "Lanfang"
@@ -2531,8 +2481,8 @@ PRU_an_ADJ:0 "Peruvian"
  KAL_rc_DEF:0 "the Kalimantan Sultanate"
  KAL_an:0 "Kalimantan Sultanate"
  KAL_an_DEF:0 "the Kalimantan Sultanate"
- KAL_cn:0 "Kalimantan Sultanate"
- KAL_cn_DEF:0 "the Kalimantan Sultanate"
+ KAL_cn:0 "Iron Alliance of the Dayak"
+ KAL_cn_DEF:0 "the Iron Alliance of the Dayak"
  KAL_lb:0 "Kalimantan Sultanate"
  KAL_lb_DEF:0 "the Kalimantan Sultanate"
  KAL_ss:0 "Kalimantan Sultanate"
@@ -3080,31 +3030,6 @@ PRU_an_ADJ:0 "Peruvian"
  FST_an_ADJ:0 "Australien"
 
 
- BOX_ni:0 "Yihetuan Uprising"
- BOX_ni_DEF:0 "the Yihetuan Uprising"
- BOX_ds:0 "Yihetuan Uprising"
- BOX_ds_DEF:0 "the Yihetuan Uprising"
- BOX_rc:0 "Yihetuan Uprising"
- BOX_rc_DEF:0 "the Yihetuan Uprising"
- BOX_an:0 "Yihetuan Uprising "
- BOX_an_DEF:0 "the Yihetuan Uprising"
- BOX_cn:0 "Yihetuan Uprising"
- BOX_cn_DEF:0 "the Yihetuan Uprising"
- BOX_lb:0 "Yihetuan Uprising"
- BOX_lb_DEF:0 "the Yihetuan Uprising"
- BOX_ss:0 "Yihetuan Uprising"
- BOX_ss_DEF:0 "the Yihetuan Uprising"
- BOX_jc:0 "Yihetuan Uprising"
- BOX_jc_DEF:0 "the Yihetuan Uprising"
- BOX_ni_ADJ:0 "Chinese"
- BOX_rc_ADJ:0 "Chinese"
- BOX_lb_ADJ:0 "Chinese"
- BOX_ss_ADJ:0 "Chinese"
- BOX_jc_ADJ:0 "Chinese"
- BOX_ds_ADJ:0 "Chinese"
- BOX_cn_ADJ:0 "Chinese"
- BOX_an_ADJ:0 "Chinese"
-
 
  FSM_ni:0 "Second Saudeleur Dynastic Empire"
  FSM_ni_DEF:0 "the Saudeleur Dynastic Empire"
@@ -3119,8 +3044,8 @@ PRU_an_ADJ:0 "Peruvian"
 
  PNG_ni:1 "Papua"
  PNG_ni_DEF:1 "Papua"
- PNG_cn:0 "Papua New Guinea"
- PNG_cn_DEF:0 "Papua New Guinea"
+ PNG_cn:0 "West Papua Free State"
+ PNG_cn_DEF:0 "the West Papua Free State"
  PNG_ds:1 "Federation of Papuan Peoples"
  PNG_ds_DEF:1 "the Federation of Papuan Peoples"
  PNG_jc:1 "United Papuan Communes"
@@ -4535,31 +4460,6 @@ SAN_an_ADJ:0 "Indian"
  FUJ_ds_ADJ:0 "Chinese"
  FUJ_cn_ADJ:0 "Chinese"
  FUJ_an_ADJ:0 "Chinese"
-
- TPG_ni:0 "Nanjing-Shanghai Protection Committee"
- TPG_ni_DEF:0 "The Nanjing-Shanghai Protection Committee"
- TPG_ds:0 "Nanjing-Shanghai Protection Committee"
- TPG_ds_DEF:0 "The Nanjing-Shanghai Protection Committee"
- TPG_rc:0 "Nanjing-Shanghai Protection Committee"
- TPG_rc_DEF:0 "The Nanjing-Shanghai Protection Committee"
- TPG_an:0 "Nanjing-Shanghai Protection Committee"
- TPG_an_DEF:0 "The Nanjing-Shanghai Protection Committee"
- TPG_cn:0 "Nanjing-Shanghai Protection Committee"
- TPG_cn_DEF:0 "The Nanjing-Shanghai Protection Committee"
- TPG_lb:0 "Nanjing-Shanghai Protection Committee"
- TPG_lb_DEF:0 "The Nanjing-Shanghai Protection Committee"
- TPG_ss:0 "Nanjing-Shanghai Protection Committee"
- TPG_ss_DEF:0 "The Nanjing-Shanghai Protection Committee"
- TPG_jc:0 "Nanjing-Shanghai Protection Committee"
- TPG_jc_DEF:0 "The Nanjing-Shanghai Protection Committee"
- TPG_ni_ADJ:0 "Chinese"
- TPG_rc_ADJ:0 "Chinese"
- TPG_lb_ADJ:0 "Chinese"
- TPG_ss_ADJ:0 "Chinese"
- TPG_jc_ADJ:0 "Chinese"
- TPG_ds_ADJ:0 "Chinese"
- TPG_cn_ADJ:0 "Chinese"
- TPG_an_ADJ:0 "Chinese"
  
  KWA_ni:0 "Army of National Liberation"
  KWA_ni_DEF:0 "The Army of National Liberation"
@@ -8213,31 +8113,6 @@ SAN_an_ADJ:0 "Indian"
  NCH_cn_ADJ:0 "North Chinese"
  NCH_an_ADJ:0 "North Chinese"
 
- SHI_ni:0 "Lingnan Military Protection District"
- SHI_ni_DEF:0 "The Lingnan Military Protection District"
- SHI_ds:0 "Lingnan Military Protection District"
- SHI_ds_DEF:0 "The Lingnan Military Protection District"
- SHI_rc:0 "Lingnan Military Protection District"
- SHI_rc_DEF:0 "The Lingnan Military Protection District"
- SHI_an:0 "Lingnan Military Protection District"
- SHI_an_DEF:0 "The Lingnan Military Protection District"
- SHI_cn:0 "Lingnan Military Protection District"
- SHI_cn_DEF:0 "The Lingnan Military Protection District"
- SHI_lb:0 "Lingnan Military Protection District"
- SHI_lb_DEF:0 "The Lingnan Military Protection District"
- SHI_ss:0 "Lingnan Military Protection District"
- SHI_ss_DEF:0 "The Lingnan Military Protection District"
- SHI_jc:0 "Lingnan Military Protection District"
- SHI_jc_DEF:0 "The Lingnan Military Protection District"
- SHI_ni_ADJ:0 "South Chinese"
- SHI_rc_ADJ:0 "South Chinese"
- SHI_lb_ADJ:0 "South Chinese"
- SHI_ss_ADJ:0 "South Chinese"
- SHI_jc_ADJ:0 "South Chinese"
- SHI_ds_ADJ:0 "South Chinese"
- SHI_cn_ADJ:0 "South Chinese"
- SHI_an_ADJ:0 "South Chinese"
-
  RSC_ni:0 "Russian Concessions Territories"
  RSC_ni_DEF:0 "the Russian Concessions Territories"
  RSC_ds:0 "Russian Concessions Territories"
@@ -9223,6 +9098,39 @@ MLT_an_ADJ:0 "Maltese"
  MUG:0 "Mughal Empire"
  MUG_DEF:0 "the Mughal Empire"
  MUG_ADJ:0 "Mughal"
+
+ HAR:0 "Harvester's Republic"
+ HAR_DEF:0 "the Harvester's Republic"
+ HAR_ADJ:0 "Harvester"
+
+ DEL:0 "Deli Company"
+ DEL_DEF:0 "the Deli Company"
+ DEL_ADJ:0 "Delian"
+
+ CCO:0 "Corsair Confederacy"
+ CCO_DEF:0 "the Corsair Confederacy"
+ CCO_ADJ:0 "Corsairi"
+
+ KRA:0 "Children of the Great Furnace"
+ KRA_DEF:0 "the Children of the Great Furnace"
+ KRA_ADJ:0 "Kraktoan"
+
+ USS:0 "Union of Steel Sultans"
+ USS_DEF:0 "the Union of Steel Sultans"
+ USS_ADJ:0 "Javan"
+
+ BOR:0 "Raj of Borneo"
+ BOR_DEF:0 "the Raj of Borneo"
+ BOR_ADJ:0 "Borneoan"
+
+ SUL:0 "Pacified Territories of Anglo-Dutch Sulawesi"
+ SUL_DEF:0 "the Pacified Territories of Anglo-Dutch Sulawesi"
+ SUL_ADJ:0 "Sulawesian"
+
+ MKS:0 "Makassar Students' Alliance"
+ MKS_DEF:0 "the Makassar Students' Alliance"
+ MKS_ADJ:0 "Makassari"
+ 
 
 ###################################
 # TEMPLATE
