--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1161,7 +1161,7 @@
  STATE_1160: "Ronne Ice Shelf"
  STATE_1161: "Coats Land"
  STATE_1162: "Princess Astrid Coast"
- STATE_1163: "Queen Maud Coast"
+ STATE_1163: "King Tapir Land"
  STATE_1164: "Enderby Land"
  STATE_1165: "Kemp Land"
  STATE_1166: "Princess Elizabeth Land"
