South America rework flags + Federal League

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -2029,30 +2029,30 @@ GAN_an_ADJ:0 "Mongolian"
  ELS_cn_ADJ:0 "El Salvadoran"
  ELS_an_ADJ:0 "El Salvadoran"
 
- NWG_ni:0 "Empire of Gran Colombia"
- NWG_ni_DEF:0 "The Empire of Gran Colombia"
- NWG_ds:0 "Dual Monarchy of New Granada and Hispaniola"
+ NWG_ni:0 "Dual Monarchy"
+ NWG_ni_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
+ NWG_ds:0 "Dual Monarchy"
  NWG_ds_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
- NWG_rc:0 "Empire of Gran Colombia"
- NWG_rc_DEF:0 "The Empire of Gran Colombia"
- NWG_an:0 "Empire of Gran Colombia"
- NWG_an_DEF:0 "The Empire of Gran Colombia"
- NWG_cn:0 "Empire of Gran Colombia"
- NWG_cn_DEF:0 "The Empire of Gran Colombia"
- NWG_lb:0 "Empire of Gran Colombia"
- NWG_lb_DEF:0 "The Empire of Gran Colombia"
- NWG_ss:0 "Empire of Gran Colombia"
- NWG_ss_DEF:0 "The Empire of Gran Colombia"
- NWG_jc:0 "Empire of Gran Colombia"
- NWG_jc_DEF:0 "The Empire of Gran Colombia"
- NWG_ni_ADJ:0 "Colombian"
- NWG_rc_ADJ:0 "Colombian"
- NWG_lb_ADJ:0 "Colombian"
- NWG_ss_ADJ:0 "Colombian"
- NWG_jc_ADJ:0 "Colombian"
- NWG_ds_ADJ:0 "Colombian"
- NWG_cn_ADJ:0 "Colombian"
- NWG_an_ADJ:0 "Colombian"
+ NWG_rc:0 "Dual Monarchy"
+ NWG_rc_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
+ NWG_an:0 "Dual Monarchy"
+ NWG_an_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
+ NWG_cn:0 "Dual Monarchy"
+ NWG_cn_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
+ NWG_lb:0 "Dual Monarchy"
+ NWG_lb_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
+ NWG_ss:0 "Dual Monarchy"
+ NWG_ss_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
+ NWG_jc:0 "Dual Monarchy"
+ NWG_jc_DEF:0 "The Dual Monarchy of New Granada and Hispaniola"
+ NWG_ni_ADJ:0 "Imperial Spanish"
+ NWG_rc_ADJ:0 "Imperial Spanish"
+ NWG_lb_ADJ:0 "Imperial Spanish"
+ NWG_ss_ADJ:0 "Imperial Spanish"
+ NWG_jc_ADJ:0 "Imperial Spanish"
+ NWG_ds_ADJ:0 "Imperial Spanish"
+ NWG_cn_ADJ:0 "Imperial Spanish"
+ NWG_an_ADJ:0 "Imperial Spanish"
 
  ECU_ni:0 "Ecuador"
  ECU_ni_DEF:0 "The Republic of Ecuador"
@@ -2104,30 +2104,30 @@ PRU_ds_ADJ:0 "Peruvian"
 PRU_cn_ADJ:0 "Peruvian"
 PRU_an_ADJ:0 "Peruvian"
 
- CHR_ni:0 "Andine Federation"
- CHR_ni_DEF:0 "The Andine Federation"
- CHR_ds:0 "Andine Federation"
- CHR_ds_DEF:0 "The Andine Federation"
- CHR_rc:0 "Andine Federation"
- CHR_rc_DEF:0 "The Andine Federation"
- CHR_an:0 "Andine Federation"
- CHR_an_DEF:0 "The Andine Federation"
- CHR_cn:0 "Blessed Crown of Hispania and the Four Parts"
+ CHR_ni:0 "Blessed Crown of Hispania"
+ CHR_ni_DEF:0 "The Blessed Crown of Hispania and the Four Parts"
+ CHR_ds:0 "Blessed Crown of Hispania"
+ CHR_ds_DEF:0 "The Blessed Crown of Hispania and the Four Parts"
+ CHR_rc:0 "Blessed Crown of Hispania"
+ CHR_rc_DEF:0 "The Blessed Crown of Hispania and the Four Parts"
+ CHR_an:0 "Blessed Crown of Hispania"
+ CHR_an_DEF:0 "The Blessed Crown of Hispania and the Four Parts"
+ CHR_cn:0 "Blessed Crown of Hispania"
  CHR_cn_DEF:0 "The Blessed Crown of Hispania and the Four Parts"
- CHR_lb:0 "Andine Federation"
- CHR_lb_DEF:0 "The Andine Federation"
- CHR_ss:0 "Andine Federation"
- CHR_ss_DEF:0 "The Andine Federation"
- CHR_jc:0 "Andine Federation"
- CHR_jc_DEF:0 "The Andine Federation"
- CHR_ni_ADJ:0 "Charcan"
- CHR_rc_ADJ:0 "Charcan"
- CHR_lb_ADJ:0 "Charcan"
- CHR_ss_ADJ:0 "Charcan"
- CHR_jc_ADJ:0 "Charcan"
- CHR_ds_ADJ:0 "Charcan"
- CHR_cn_ADJ:0 "Charcan"
- CHR_an_ADJ:0 "Charcan"
+ CHR_lb:0 "Blessed Crown of Hispania"
+ CHR_lb_DEF:0 "The Blessed Crown of Hispania and the Four Parts"
+ CHR_ss:0 "Blessed Crown of Hispania"
+ CHR_ss_DEF:0 "The Blessed Crown of Hispania and the Four Parts"
+ CHR_jc:0 "Blessed Crown of Hispania"
+ CHR_jc_DEF:0 "The Blessed Crown of Hispania and the Four Parts"
+ CHR_ni_ADJ:0 "Hispanic-American"
+ CHR_rc_ADJ:0 "Hispanic-American"
+ CHR_lb_ADJ:0 "Hispanic-American"
+ CHR_ss_ADJ:0 "Hispanic-American"
+ CHR_jc_ADJ:0 "Hispanic-American"
+ CHR_ds_ADJ:0 "Hispanic-American"
+ CHR_cn_ADJ:0 "Hispanic-American"
+ CHR_an_ADJ:0 "Hispanic-American"
 
  ACR_ni:0 "Acre Republic"
  ACR_ni_DEF:0 "The Acre Republic"
@@ -2354,24 +2354,24 @@ PRU_an_ADJ:0 "Peruvian"
  ARG_cn_ADJ:0 "Rioplatense"
  ARG_an_ADJ:0 "Rioplatense"
 
- CHL_ni:0 "Kingdom of Wallmapu"
- CHL_ni_DEF:0 "the Kingdom of Wallmapu"
- CHL_ds:0 "Chilean National People's Republic"
- CHL_ds_DEF:0 "the Chilean National People's Republic"
- CHL_rc:0 "Chilean National People's Republic"
- CHL_rc_DEF:0 "the Chilean National People's Republic"
- CHL:0 "Chile"
- CHL_DEF:0 "the Republic of Chile"
- CHL_jc:0 "Chilean People's Republic"
- CHL_jc_DEF:0 "the Chilean People's Republic"
- CHL_ni_ADJ:0 "Chilean"
- CHL_rc_ADJ:0 "Chilean"
- CHL_lb_ADJ:0 "Chilean"
- CHL_ss_ADJ:0 "Chilean"
- CHL_jc_ADJ:0 "Chilean"
- CHL_ds_ADJ:0 "Chilean"
- CHL_cn_ADJ:0 "Chilean"
- CHL_an_ADJ:0 "Chilean"
+CHL_ni:0 "Kingdom of Wallmapu"
+CHL_ni_DEF:0 "The Kingdom of Wallmapu"
+CHL_ds:0 "Kingdom of Wallmapu"
+CHL_ds_DEF:0 "The Kingdom of Wallmapu"
+CHL_rc:0 "Kingdom of Wallmapu"
+CHL_rc_DEF:0 "The Kingdom of Wallmapu"
+CHL:0 "Kingdom of Wallmapu"
+CHL_DEF:0 "The Kingdom of Wallmapu"
+CHL_jc:0 "Kingdom of Wallmapu"
+CHL_jc_DEF:0 "The Kingdom of Wallmapu"
+CHL_ni_ADJ:0 "Mapuche"
+CHL_rc_ADJ:0 "Mapuche"
+CHL_lb_ADJ:0 "Mapuche"
+CHL_ss_ADJ:0 "Mapuche"
+CHL_jc_ADJ:0 "Mapuche"
+CHL_ds_ADJ:0 "Mapuche"
+CHL_cn_ADJ:0 "Mapuche"
+CHL_an_ADJ:0 "Mapuche"
 
  SCT_ni:0 "Santa Catarina"
  SCT_ni_DEF:0 "the Republic of Santa Catarina"
@@ -9067,8 +9067,8 @@ MLT_an_ADJ:0 "Maltese"
  TVI_DEF:0 "the Dominion of Terravictoria"
  TVI_ADJ:0 "Terravictorian"
 
- RLP:0 "Free Settlements of the Rio de La Plata"
- RLP_DEF:0 "the Free Settlements of the Rio de La Plata"
+ RLP:0 "Free Settlements"
+ RLP_DEF:0 "The Free Settlements of the Rio de La Plata"
  RLP_ADJ:0 "Rio La Platan"
 
  NWL:0 "New Wales"
@@ -9077,7 +9077,7 @@ MLT_an_ADJ:0 "Maltese"
 
  NCA:0 "New Calhoun"
  NCA_DEF:0 "New Calhoun"
- NCA_ADJ:0 "New Calhouni"
+ NCA_ADJ:0 "New Calhounian"
 
  CAY:0 "Free Economic Community"
  CAY_DEF:0 "the Free Economic Community"
