Venus Satelite News Event Text

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -1153,6 +1153,10 @@
   PBNews.289.d:0 "Following the dissolution of the Galician Occupation government, Russia has chosen to approach the Polish autonomy and offer them territorial concessions. Under what is being called the Krakow Award, the Polish Autonomy has been granted control of the former territories of Galicia.\n\nShocked crowds celebrate across Poland and Galicia, as Poland regains territories once thought permanently lost after the failure of the First National Awakening."
   PBNews.289.a:0 "Greater Poland, within the Empire?"
 
+  PBNews.290.t:0 "RUSSIA LAUNCHES DEZHNEV-1"
+  PBNews.290.d:0 "The Dezhnev-1 probe has been successfully launched from a secure rocket site in Kazakhstan, marking a significant achievement in the Russian Empire's ambitious space exploration program. The launch vehicle has carried the probe beyond Earth's atmosphere and into its calculated trajectory toward Venus, a journey expected to take just under a year.\n\nScientists and engineers overseeing the mission have conducted extensive post-launch assessments and confirmed that all systems aboard the Dezhnev-1 are functioning optimally, have been calibrated and are ready for operation upon arrival."
+  PBNews.290.a:0 "Reaching for the Stars one at a time."
+
   PBNews.297.t:0 "SECOND SOUTHERN EXPEDITION"
   PBNews.297.d:0 "Early this morning, reports emerged of raids by North Chinese forces against the South, culminating in open combat across the entire border. Beijing has formally renounced the terms of the Peking Conferences, stating their intent to topple the Heavenly Emperor in the South and reunite China.\n\nInternational response remains limited, but if successful, Beijing will finally topple the division of China first imposed in 1870. The Quadrilateral Commission has stated their neutrality in the conflict, although observers have noted a worrying buildup of commission forces at their territories across China proper."
   PBNews.297.a:0 "Yet another war in Asia."
