Expanding the Free Settlements

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1354,3 +1354,5 @@
  STATE_1353: "Western Papua"
  STATE_1354: "Southern Papua"
  STATE_1355: "Krakatoa Archipelago"
+
+ STATE_1367: "Greater Buenos Aires"
