--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -2617,6 +2617,9 @@ VICTORY_POINTS_4757: "Bowieville"
 #1177 - GELDERLAND
  VICTORY_POINTS_9403: "Enschede"
 
+#1125 - La Pampa
+ VICTORY_POINTS_1639:0 "Bahía Blanca"
+
 
 
  VICTORY_POINTS_4801: "Urga"
