Province Improvements in Southern SA

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1295,6 +1295,7 @@ VICTORY_POINTS_10271: "Vancouver"
 #502 - RIO GRANDE DO SUL
  VICTORY_POINTS_10447: "Porto Alegre"
 #503 - PARANA
+ VICTORY_POINTS_14632: "Curitiba"
 #504 - IGUACU
 #505 - SAO FRANCISCO
  VICTORY_POINTS_8140: "Vila Boa"
@@ -1302,7 +1303,10 @@ VICTORY_POINTS_10271: "Vancouver"
 #507 - MAGALLANES
 #508 - MENDOZA
 #509 - CHACO AUSTRAL
+ VICTORY_POINTS_2106: "Resistencia"
 #510 - ENTRE RIOS
+ VICTORY_POINTS_1449: "Parana"
+ VICTORY_POINTS_10943: "Concordia"
 #511 - RIO NEGRO
 #512 - PATAGONIA
 #513 - TLEMCEN
@@ -2352,13 +2356,19 @@ VICTORY_POINTS_4757: "Bowieville"
 #997 - ARACUANIA
 #998 - TIERRA DEL FUEGO
 #999 - CORRIENTES
+ VICTORY_POINTS_12964: "Corrientes"
 #1000 - CAMPOS DEL NORTE
  VICTORY_POINTS_7500: "Rosario"
+ VICTORY_POINTS_15528: "Santa Fe"
 #1001 - FORMOSA
+ VICTORY_POINTS_12922: "Formosa"
 #1002 - ATACAMA
+ VICTORY_POINTS_2224: "San Salvador de Jujuy"
 #1003 - TUCUMAN
  VICTORY_POINTS_8216: "Tucumán"
+ VICTORY_POINTS_13476: "Salta"
 #1004 - NUEVA ESPERANZA
+ VICTORY_POINTS_15530: "Catamarca"
 #1005 - YUKON
 #1006 - NOVOARKHANGELSK
  VICTORY_POINTS_13203: "Novo-Arkhangelsk"
