--- a/localisation/english/PB_country_specific/PB_China_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_China_l_english.yml
@@ -39,9 +39,13 @@
   PB_CHI_Far_from_Home:0 "On the Hills of Manchuria"
   PB_CHI_Far_from_Home_desc:0 "Far from home and surrounded by enemies, Zheltorossiya is the independent arm of Russian influence in the Middle Kingdom. Since the calcification of the Russian occupation, it has become the launch point for various interventions, particularly the recent intervention in Xinjiang.\n\nFollowing the collapse of the Qing, the Tsardom moved to occupy Outer Mongolia, establishing the Mongol Principality as a client state. Similarly, when the armies of the would-be modern Timur, Ma Zhongying, pressed towards the Central Asian border, the Tsardom answered in kind.\n\nNow, the Tsarist army remains overextended, committed to fighting the rebel groups of our protectorates while keeping watch for the inevitable return of the Japanese. North China sits across the border, with their degenerate anarchists ready to tear down the Tsardom and replace it with chaos.\n\nEnemies sit at all the edges of our Empire, and we must fight viciously if we are to protect what is rightfully ours."
 
- PB_CHI_Extraterritorial_Dividends: "Extraterritorial Dividends"
-  
+  PB_CHI_Extraterritorial_Dividends: "Extraterritorial Dividends"
 
+  PB_ALB_Army_Navy: "The Black Fleet"
+  PB_ALB_Army_Navy_desc: "Yo ho, yo ho, a pirate’s life for me.\nWe pillage, we plunder, we rifle and loot.\nDrink up me ‘earties, yo ho.\nWe kidnap and ravage and don’t give a hoot.\nDrink up me ‘earties, yo ho.\n\nYo ho, yo ho, a pirate’s life for me.\nWe extort and pilfer, we filch and sack.\nDrink up me ‘earties, yo ho.\nMaraud and embezzle and even highjack.\nDrink up me ‘earties, yo ho.\n\nYo ho, yo ho, a pirate’s life for me.\nWe kindle and char and enflame and ignite.\nDrink up me ‘earties, yo ho.\nWe burn up the city, we’re really a fright.\nDrink up me ‘earties, yo ho.\n\nWe’re rascals and scoundrels, we’re villains and knaves.\nDrink up me ‘earties, yo ho.\nWe’re devils and black sheep, we’re really bad eggs.\nDrink up me ‘earties, yo ho.\n\nYo ho, you ho, a pirate’s life for me.\nWe’re beggars and blighters and ne’er do-well cads,\nDrink up me ‘earties, yo ho.\nAye, but we’re loved by our mommies and dads,\nDrink up me ‘earties, yo ho."
+
+  zhang_zongchang_desc: "The greatest pirate who ever lived!"
+  
   ##########################
   # REPUBLICAN CHINA FOCUSES
   ##########################
