more vps for SA

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -783,8 +783,13 @@
 #299 - FALKLAND ISLANDS
 #300 - URUGUAY
  VICTORY_POINTS_10362: "Montevideo"
+ VICTORY_POINTS_12336: "Maldonado"
+ VICTORY_POINTS_12481: "Treinta y Tres"
 #301 - PARAGUAY
  VICTORY_POINTS_2152: "Asunción"
+ VICTORY_POINTS_12901: "Ciudad del Este"
+ VICTORY_POINTS_11023: "Pedro Juan Caballero"
+ VICTORY_POINTS_14556: "Luque"
 #302 - LA PAZ
  VICTORY_POINTS_5230: "La Paz"
 #303 - LIMA
@@ -1293,7 +1298,10 @@ VICTORY_POINTS_10271: "Vancouver"
 #501 - ELIAS DA SILVA
  VICTORY_POINTS_10513: "Sao Paulo"
 #502 - RIO GRANDE DO SUL
- VICTORY_POINTS_10447: "Porto Alegre"
+ VICTORY_POINTS_14554: "Porto Alegre"
+ VICTORY_POINTS_7594: "Caxias do Sul"
+ VICTORY_POINTS_4436: "Pelotas"
+ VICTORY_POINTS_1598: "Santa Maria"
 #503 - PARANA
  VICTORY_POINTS_14632: "Curitiba"
 #504 - IGUACU
@@ -1762,6 +1770,7 @@ VICTORY_POINTS_7453: "Heldstad"
  VICTORY_POINTS_1440: "San Juan"
 #687 - GUYANA
 #688 - CHACO BOREAL
+ VICTORY_POINTS_2209: "Ciudad del Acero"
 #689 - JAMAICA
  VICTORY_POINTS_12304: "Kingston"
 #690 - NORTHERN BAHAMAS
@@ -2345,7 +2354,9 @@ VICTORY_POINTS_4757: "Bowieville"
 #986 - CUMANA
 #987 - PIURA
 #988 - SANTA CATARINA
+ VICTORY_POINTS_10405: "Florianopolis"
 #989 - PAYSANDU
+ VICTORY_POINTS_12468: "Salto"
 #990 - CARAJAS
 #991 - EL BENI
 #992 - POTOSI
@@ -2629,6 +2640,11 @@ VICTORY_POINTS_4757: "Bowieville"
 
 #1125 - La Pampa
  VICTORY_POINTS_1639:0 "Bahía Blanca"
+
+#1223 - Aracuria
+ VICTORY_POINTS_8224:0 "Dourados"
+#1224 - Chaco Boreal
+ VICTORY_POINTS_12916:0 "Robore"
 
 
 
