moving characters to post NSB

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -2825,31 +2825,6 @@ CHL_an_ADJ:0 "Mapuche"
  SIC_cn_ADJ:0 "Chinese"
  SIC_an_ADJ:0 "Chinese"
 
- GXC_ni:0 "Galapagos Scientific Territory"
- GXC_ni_DEF:0 "The Galapagos Scientific Territory"
- GXC_ds:0 "Galapagos Scientific Territory"
- GXC_ds_DEF:0 "The Galapagos Scientific Territory"
- GXC_rc:0 "Galapagos Scientific Territory"
- GXC_rc_DEF:0 "The Galapagos Scientific Territory"
- GXC_an:0 "Galapagos Scientific Territory"
- GXC_an_DEF:0 "The Galapagos Scientific Territory"
- GXC_cn:0 "Galapagos Scientific Territory"
- GXC_cn_DEF:0 "The Galapagos Scientific Territory"
- GXC_lb:0 "Galapagos Scientific Territory"
- GXC_lb_DEF:0 "The Galapagos Scientific Territory"
- GXC_ss:0 "Galapagos Scientific Territory"
- GXC_ss_DEF:0 "The Galapagos Scientific Territory"
- GXC_jc:0 "Galapagos Scientific Territory"
- GXC_jc_DEF:0 "The Galapagos Scientific Territory"
- GXC_ni_ADJ:0 "Galapagos"
- GXC_rc_ADJ:0 "Galapagos"
- GXC_lb_ADJ:0 "Galapagos"
- GXC_ss_ADJ:0 "Galapagos"
- GXC_jc_ADJ:0 "Galapagos"
- GXC_ds_ADJ:0 "Galapagos"
- GXC_cn_ADJ:0 "Galapagos"
- GXC_an_ADJ:0 "Galapagos"
-
  BFF_ni:0 "Black Flag Fleet"
  BFF_ni_DEF:0 "The Black Flag Fleet"
  BFF_ds:0 "Black Flag Fleet"
@@ -8927,6 +8902,10 @@ MLT_an_ADJ:0 "Maltese"
  NCA:0 "New Calhoun"
  NCA_DEF:0 "New Calhoun"
  NCA_ADJ:0 "New Calhounian"
+
+ GPG:0 "Galapagos Scientific Territory"
+ GPG_DEF:0 "the Galapagos Scientific Territory"
+ GPG_ADJ:0 "Galapagoan"
 
  CAY:0 "Free Economic Community"
  CAY_DEF:0 "the Free Economic Community"
