more strategic regions

--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -18,13 +18,13 @@
  STRATEGICREGION_18:0 "English Channel"
  STRATEGICREGION_19:0 "Northern France"
  STRATEGICREGION_20:0 "Southern France"
- STRATEGICREGION_21:0 "Alpine Region"
- STRATEGICREGION_22:0 "Czechoslovakia"
+ STRATEGICREGION_21:0 "Austria"
+ STRATEGICREGION_22:0 "Bohemia"
  STRATEGICREGION_23:0 "Italy"
- STRATEGICREGION_24:0 "Western Balkans"
+ STRATEGICREGION_24:0 "Northern Balkans"
  STRATEGICREGION_25:0 "Greece"
- STRATEGICREGION_26:0 "Eastern Balkans"
- STRATEGICREGION_27:0 "Northern Balkans"
+ STRATEGICREGION_26:0 "Romania"
+ STRATEGICREGION_27:0 "Hungary"
  STRATEGICREGION_28:0 "Middle East"
  STRATEGICREGION_29:0 "Central Mediterranean Sea"
  STRATEGICREGION_30:0 "Black Sea"
@@ -117,7 +117,7 @@
  STRATEGICREGION_117:0 "East Coast"
  STRATEGICREGION_118:1 "Cascades"
  STRATEGICREGION_119:0 "South West"
- STRATEGICREGION_120:0 "Great Plains"
+ STRATEGICREGION_120:0 "Southern Great Plains"
  STRATEGICREGION_121:0 "Eastern Canada"
  STRATEGICREGION_122:1 "Yukon"
  STRATEGICREGION_123:1 "Transvolcanic Belt"
@@ -125,8 +125,8 @@
  STRATEGICREGION_125:0 "Brazil"
  STRATEGICREGION_126:1 "Eastern Maghreb"
  STRATEGICREGION_127:0 "Sahara Desert"
- STRATEGICREGION_128:0 "Egypt"
- STRATEGICREGION_129:0 "Asia minor"
+ STRATEGICREGION_128:0 "Lower Nile"
+ STRATEGICREGION_129:0 "Western Anatolia"
  STRATEGICREGION_130:0 "Ukraine"
  STRATEGICREGION_131:0 "Belarus"
  STRATEGICREGION_132:1 "Novgorod"
@@ -135,9 +135,9 @@
  STRATEGICREGION_135:0 "Kuban Region"
  STRATEGICREGION_136:1 "Alash"
  STRATEGICREGION_137:0 "Western Steppe"
- STRATEGICREGION_138:0 "Ural Region"
+ STRATEGICREGION_138:0 "Southern Urals"
  STRATEGICREGION_139:0 "South Africa"
- STRATEGICREGION_140:0 "Sub-Saharan Africa"
+ STRATEGICREGION_140:0 "Sahel Region"
  STRATEGICREGION_141:0 "Eastern India"
  STRATEGICREGION_142:1 "North Indochina"
  STRATEGICREGION_143:0 "Northern China"
@@ -196,7 +196,7 @@
  STRATEGICREGION_196:2 "Central Arabia"
  STRATEGICREGION_197:0 "New England"
  STRATEGICREGION_198:1 "Steel Belt"
- STRATEGICREGION_199:1 "Northern Rockies"
+ STRATEGICREGION_199:1 "Rocky Mountains"
  STRATEGICREGION_200:1 "Qinghai"
  STRATEGICREGION_201:0 "Northern Andes"
  STRATEGICREGION_202:0 "Aegean Sea"
@@ -216,7 +216,7 @@
  STRATEGICREGION_216:0 "Upper Nile"
  STRATEGICREGION_217:0 "Lake Victoria"
  STRATEGICREGION_218:0 "California"
- STRATEGICREGION_219:1 "Southern Rockies"
+ STRATEGICREGION_219:1 "Colorado Basin"
  STRATEGICREGION_220:0 "Labrador and Newfoundland"
  STRATEGICREGION_221:0 "Saskatchewan"
  STRATEGICREGION_222:0 "Northern Canada"
@@ -279,13 +279,13 @@
  STRATEGICREGION_278:1 "Western Finland"
  STRATEGICREGION_279:1 "Gulf of Bothnia"
  STRATEGICREGION_280:0 "Guiana"
- STRATEGICREGION_281:0 "Gran Chaco"
+ STRATEGICREGION_281:0 "Boreal Gran Chaco"
  STRATEGICREGION_282:0 "Rio Grande do Sul"
  STRATEGICREGION_283:0 "Patagonia"
  STRATEGICREGION_284:0 "Southern Andes"
  STRATEGICREGION_285:0 "Rio Tocantins"
  STRATEGICREGION_286:0 "Rio Grande do Norte"
- STRATEGICREGION_287:0 "Bolivia"
+ STRATEGICREGION_287:0 "Altiplano"
  STRATEGICREGION_288:0 "Cerrado"
  STRATEGICREGION_289:0 "Beaufort Sea"
  STRATEGICREGION_290:0 "East Antarctica"
@@ -314,3 +314,23 @@
  STRATEGICREGION_313:0 "Bellingshausen Sea"
  STRATEGICREGION_314:0 "Baffin Sea"
  STRATEGICREGION_315:0 "El Eglab"
+ STRATEGICREGION_316:0 "Po Valley"
+ STRATEGICREGION_317:0 "Switzerland"
+ STRATEGICREGION_318:0 "Prussia"
+ STRATEGICREGION_319:0 "Pomerania"
+ STRATEGICREGION_320:0 "Transylvania"
+ STRATEGICREGION_321:0 "Bulgaria"
+ STRATEGICREGION_322:0 "Marmara Sea"
+ STRATEGICREGION_323:0 "Kurdistan"
+ STRATEGICREGION_324:0 "Southern Sudan"
+ STRATEGICREGION_325:0 "Darfur"
+ STRATEGICREGION_326:0 "Nigeria"
+ STRATEGICREGION_327:0 "Golden Coast"
+ STRATEGICREGION_328:0 "Peru"
+ STRATEGICREGION_329:0 "Alto Gran Chaco"
+ STRATEGICREGION_330:0 "Rio Grande"
+ STRATEGICREGION_331:0 "Great Basin"
+ STRATEGICREGION_332:0 "Northern Great Plains"
+ STRATEGICREGION_333:0 "Northern Urals"
+ STRATEGICREGION_334:0 "Eastern Anatolia"
+ STRATEGICREGION_335:0 "Southern Balkands"
