state name changes

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -622,9 +622,9 @@
  VICTORY_POINTS_3672: "Grozny"
 #233 - CISCAUCASIA
  VICTORY_POINTS_9663: "Sochi"
-#234 - KRASNODAR
+#234 - YEKATERINODAR
  VICTORY_POINTS_6741: "Kerch"
- VICTORY_POINTS_3734: "Krasnodar"
+ VICTORY_POINTS_3734: "Yekaterinodar"
 #235 - TRANSKUBAN
  VICTORY_POINTS_3717: "Maykop"
  VICTORY_POINTS_719: "Novorossiysk"
@@ -3757,7 +3757,6 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_9315:0 "Sheffield"
  VICTORY_POINTS_11405:0 "Aleksandrovsk"
  VICTORY_POINTS_9461:0 "Lugansk"
- VICTORY_POINTS_3734:0 "Krasnodar"
  VICTORY_POINTS_11349:0 "Rzhev"
  VICTORY_POINTS_8011:0 "Bangalore"
  VICTORY_POINTS_8087:0 "Hyderabad"
