TAG tweaks, removing some errors etc

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -980,8 +980,8 @@
 
  SIN_ni:0 "Kalat"
  SIN_ni_DEF:0 "The Khanate of Kalat"
- SIN_ds:0 "Kalat"
- SIN_ds_DEF:0 "The Khanate of Kalat"
+ SIN_ds:0 "Talpur Kingdom"
+ SIN_ds_DEF:0 "The Talpur Kingdom"
  SIN_rc:0 "Kalat"
  SIN_rc_DEF:0 "The Khanate of Kalat"
  SIN_an:0 "Kalat "
@@ -2348,6 +2348,26 @@ CHL_ds_ADJ:0 "Mapuche"
 CHL_cn_ADJ:0 "Mapuche"
 CHL_an_ADJ:0 "Mapuche"
 
+
+MPC_ni:0 "Kingdom of Wallmapu"
+MPC_ni_DEF:0 "The Kingdom of Wallmapu"
+MPC_ds:0 "Kingdom of Wallmapu"
+MPC_ds_DEF:0 "The Kingdom of Wallmapu"
+MPC_rc:0 "Kingdom of Wallmapu"
+MPC_rc_DEF:0 "The Kingdom of Wallmapu"
+MPC:0 "Kingdom of Wallmapu"
+MPC_DEF:0 "The Kingdom of Wallmapu"
+MPC_jc:0 "Kingdom of Wallmapu"
+MPC_jc_DEF:0 "The Kingdom of Wallmapu"
+MPC_ni_ADJ:0 "Mapuche"
+MPC_rc_ADJ:0 "Mapuche"
+MPC_lb_ADJ:0 "Mapuche"
+MPC_ss_ADJ:0 "Mapuche"
+MPC_jc_ADJ:0 "Mapuche"
+MPC_ds_ADJ:0 "Mapuche"
+MPC_cn_ADJ:0 "Mapuche"
+MPC_an_ADJ:0 "Mapuche"
+
  SCT_ni:0 "Santa Catarina"
  SCT_ni_DEF:0 "the Republic of Santa Catarina"
  SCT_ds:0 "Santa Catarina"
@@ -3308,8 +3328,8 @@ MAR_ni:0 "Maratha Confederacy"
 MAR_ni_DEF:0 "the Maratha Confederacy"
 MAR_ds:0 "Maratha Confederacy"
 MAR_ds_DEF:0 "the Maratha Confederacy"
-MAR_rc:0 "Gwallior Confederation"
-MAR_rc_DEF:0 "the Gwallior Confederation"
+MAR_rc:0 "Gwalior Confederation"
+MAR_rc_DEF:0 "the Gwalior Confederation"
 MAR_an:0 "Maratha Confederacy"
 MAR_an_DEF:0 "the Maratha Confederacy"
 MAR_cn:0 "Maratha Confederacy"
@@ -3328,6 +3348,10 @@ MAR_jc_ADJ:0 "Indian"
 MAR_ds_ADJ:0 "Indian"
 MAR_cn_ADJ:0 "Indian"
 MAR_an_ADJ:0 "Indian"
+
+JBP: "Central Provinces"
+JBP_DEF: "the Central Provinces"
+JBP_ADJ: "Jabalpur"
 
 TRV_ni:0 "Travancore"
 TRV_ni_DEF:0 "the State of Travancore"
@@ -3405,30 +3429,30 @@ SKM_ds_ADJ:0 "Indian"
 SKM_cn_ADJ:0 "Indian"
 SKM_an_ADJ:0 "Indian"
 
-SAN_ni:0 "Sanghli State"
-SAN_ni_DEF:0 "The Sanghli State"
-SAN_ds:0 "Sanghli State"
-SAN_ds_DEF:0 "The Sanghli State"
-SAN_rc:0 "The Iron Caste"
-SAN_rc_DEF:0 "The Iron Caste"
-SAN_an:0 "Sanghli State"
-SAN_an_DEF:0 "The Sanghli State"
-SAN_cn:0 "The Iron Caste"
-SAN_cn_DEF:0 "The Iron Caste"
-SAN_lb:0 "Sanghli State"
-SAN_lb_DEF:0 "The Sanghli State"
-SAN_ss:0 "Sanghli State"
-SAN_ss_DEF:0 "The Sanghli State"
-SAN_jc:0 "Sanghli Republic"
-SAN_jc_DEF:0 "The Sanghli Republic"
-SAN_ni_ADJ:0 "Indian"
-SAN_rc_ADJ:0 "Indian"
-SAN_lb_ADJ:0 "Indian"
-SAN_ss_ADJ:0 "Indian"
-SAN_jc_ADJ:0 "Indian"
-SAN_ds_ADJ:0 "Indian"
-SAN_cn_ADJ:0 "Indian"
-SAN_an_ADJ:0 "Indian"
+BDK_ni:0 "Bundelkhand State"
+BDK_ni_DEF:0 "The Bundelkhand State"
+BDK_ds:0 "Bundelkhand State"
+BDK_ds_DEF:0 "The Bundelkhand State"
+BDK_rc:0 "The Iron Caste"
+BDK_rc_DEF:0 "The Iron Caste"
+BDK_an:0 "Bundelkhand State"
+BDK_an_DEF:0 "The Bundelkhand State"
+BDK_cn:0 "The Iron Caste"
+BDK_cn_DEF:0 "The Iron Caste"
+BDK_lb:0 "Bundelkhand State"
+BDK_lb_DEF:0 "The Bundelkhand State"
+BDK_ss:0 "Bundelkhand State"
+BDK_ss_DEF:0 "The Bundelkhand State"
+BDK_jc:0 "Bundelkhand Republic"
+BDK_jc_DEF:0 "The Bundelkhand Republic"
+BDK_ni_ADJ:0 "Indian"
+BDK_rc_ADJ:0 "Indian"
+BDK_lb_ADJ:0 "Indian"
+BDK_ss_ADJ:0 "Indian"
+BDK_jc_ADJ:0 "Indian"
+BDK_ds_ADJ:0 "Indian"
+BDK_cn_ADJ:0 "Indian"
+BDK_an_ADJ:0 "Indian"
 
  PHI_ni:0 "Confederation of the Philippines"
  PHI_ni_DEF:0 "The Confederation of the Philippines"
@@ -3734,22 +3758,22 @@ SAN_an_ADJ:0 "Indian"
  BOS_cn_ADJ:0 "Bosnian"
  BOS_an_ADJ:0 "Bosnian"
 
- CRO_ni:0 "Croatian Common Republic"
- CRO_ni_DEF:0 "The Croatian Common Republic"
- CRO_ds:0 "Croatian Common Republic"
- CRO_ds_DEF:0 "The Croatian Common Republic"
- CRO_rc:0 "Croatian Common Republic"
- CRO_rc_DEF:0 "The Croatian Common Republic"
- CRO_an:0 "Croatian Common Republic"
- CRO_an_DEF:0 "The Croatian Common Republic"
+ CRO_ni:0 "Concordian Republic of Croatia"
+ CRO_ni_DEF:0 "The Concordian Republic of Croatia"
+ CRO_ds:0 "Concordian Republic of Croatia"
+ CRO_ds_DEF:0 "The Concordian Republic of Croatia"
+ CRO_rc:0 "Concordian Republic of Croatia"
+ CRO_rc_DEF:0 "The Concordian Republic of Croatia"
+ CRO_an:0 "Concordian Republic of Croatia"
+ CRO_an_DEF:0 "The Concordian Republic of Croatia"
  CRO_cn:0 "Kingdom of Croatia"
  CRO_cn_DEF:0 "The Croatian Kingdom"
  CRO_lb:0 "Kingdom of Croatia"
  CRO_lb_DEF:0 "The Croatian Kingdom"
- CRO_ss:0 "Croatian Common Republic"
- CRO_ss_DEF:0 "The Croatian Common Republic"
- CRO_jc:0 "Croatian Common Republic"
- CRO_jc_DEF:0 "The Croatian Common Republic"
+ CRO_ss:0 "Concordian Republic of Croatia"
+ CRO_ss_DEF:0 "The Concordian Republic of Croatia"
+ CRO_jc:0 "Concordian Republic of Croatia"
+ CRO_jc_DEF:0 "The Concordian Republic of Croatia"
  CRO_ni_ADJ:0 "Croatian"
  CRO_rc_ADJ:0 "Croatian"
  CRO_lb_ADJ:0 "Croatian"
@@ -3784,30 +3808,30 @@ SAN_an_ADJ:0 "Indian"
  JKM_ss_ADJ:0 "Jammu & Kashmirian"
  JKM_jc_ADJ:0 "Jammu & Kashmirian"
 
- IND_ni:0 "Indore"
- IND_ni_DEF:0 "The Indore State"
- IND_ds:0 "Bhopal Kingdom"
- IND_ds_DEF:0 "the Bhopal Kingdom"
- IND_rc:0 "Bhopal Kingdom"
- IND_rc_DEF:0 "the Bhopal Kingdom"
- IND_cn:0 "Indore"
- IND_cn_DEF:0 "The Indore State"
- IND_lb:0 "Indore"
- IND_lb_DEF:0 "The Indore State"
- IND_an:0 "Indore"
- IND_an_DEF:0 "The Indore State"
- IND_ss:0 "Indore"
- IND_ss_DEF:0 "The Indore State"
- IND_jc:0 "Indore"
- IND_jc_DEF:0 "The Indore State"
- IND_ni_ADJ:0 "Indorian"
- IND_ds_ADJ:0 "Indorian"
- IND_rc_ADJ:0 "Indorian"
- IND_cn_ADJ:0 "Indorian"
- IND_lb_ADJ:0 "Indorian"
- IND_an_ADJ:0 "Indorian"
- IND_ss_ADJ:0 "Indorian"
- IND_jc_ADJ:0 "Indorian"
+ BHP_ni:0 "Bhopal"
+ BHP_ni_DEF:0 "The Bhopal State"
+ BHP_ds:0 "Bhopal Kingdom"
+ BHP_ds_DEF:0 "the Bhopal Kingdom"
+ BHP_rc:0 "Bhopal Kingdom"
+ BHP_rc_DEF:0 "the Bhopal Kingdom"
+ BHP_cn:0 "Bhopal"
+ BHP_cn_DEF:0 "The Bhopal State"
+ BHP_lb:0 "Bhopal"
+ BHP_lb_DEF:0 "The Bhopal State"
+ BHP_an:0 "Bhopal"
+ BHP_an_DEF:0 "The Bhopal State"
+ BHP_ss:0 "Bhopal"
+ BHP_ss_DEF:0 "The Bhopal State"
+ BHP_jc:0 "Bhopal"
+ BHP_jc_DEF:0 "The Bhopal State"
+ BHP_ni_ADJ:0 "Bhopal"
+ BHP_ds_ADJ:0 "Bhopal"
+ BHP_rc_ADJ:0 "Bhopal"
+ BHP_cn_ADJ:0 "Bhopal"
+ BHP_lb_ADJ:0 "Bhopal"
+ BHP_an_ADJ:0 "Bhopal"
+ BHP_ss_ADJ:0 "Bhopal"
+ BHP_jc_ADJ:0 "Bhopal"
 
  NAG_ni:0 "Nagpur"
  NAG_ni_DEF:0 "The Nagpur State"
@@ -8878,10 +8902,6 @@ MLT_an_ADJ:0 "Maltese"
  SLA:0 "Habsburg Kingdom of the South Slavs"
  SLA_DEF:0 "The Habsburg Kingdom of the South Slavs"
  SLA_ADJ:0 "Slavonian"
-
- ILL:0 "Concordian Republic of Croatia"
- ILL_DEF:0 "the Concordian Republic of Croatia"
- ILL_ADJ:0 "Croatian"
 
  ION:0 "United States of the Ionian Islands"
  ION_DEF:0 "the United States of the Ionian Islands"
